...
            $0.aspectRatio(1)
            $0.topToSuperview($0.superview?.layoutMarginsGuide.topAnchor)
            $0.bottomToSuperview($0.superview?.layoutMarginsGuide.bottomAnchor)
        }
        titleLabel.do {
            $0.numberOfLines = 0
            $0.accessibilityIdentifier = "user-detail-user-title"
        }
        emailLabel.do {
            $0.font = UIFont.systemFont(ofSize: 14)
            $0.accessibilityIdentifier = "user-detail-user-email"
        }

        observe { [weak self] in
            guard let self else { return }
            if let coordinate = UserFormatter.coordinate(for: store.user) {
                let annotation = MKPointAnnotation()
...
