{
  "sourceLanguage" : "en",
  "strings" : {
    "tab-bar-map" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Map View"
          }
        }
      }
    },
    "tab-bar-user-list" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "List View"
          }
        }
      }
    },
    "user-detail-location-alert" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Location not found for current user."
          }
        }
      }
    }
  },
  "version" : "1.0"
}