...
        
        view.addSubviews {
            tableView
        }
        
        navigationItem.do {
            $0.title = "Users"
        }
        tableView.do {
            $0.register(UserListCell.self, forCellReuseIdentifier: "cell")
            $0.rowHeight = 80
            $0.delegate = self
            $0.edgesToSuperview()
...
